Pre-deployment: live Stripe keys, bug fixes, PWA support

--- a/public/wedding-qr-printable.html
+++ b/public/wedding-qr-printable.html
@@ -1,4 +1,9 @@
 
+<!--
+  IMPORTANT: The password below must match WEDDING_PASSWORD in your .env file!
+  If you change the password in .env, update line 100 of this file too.
+  Current password: Beatrice&Samuel2026
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
